# checkpoint-mcp-chat

./: .env.example  .gitignore  README.md  TESTING_LLM_EXECUTOR.md  app.py  package-lock.json  package.json  pyproject.toml  test_llm_executor.py  test_validator.py
.streamlit/: config.toml
config/: network_overrides.json.template  settings.py
docs/: ADMIN_INTENT_CLASSIFICATION_GUIDE.md  GATEWAY_SAFE_COMMANDS_LIST.txt  INTENT_DETECTION_TEST_MATRIX.md  SAFE_GATEWAY_COMMANDS_WHITELIST.md
services/: discovery_bootstrap_service.py  encryption.py  gateway_directory.py  gateway_script_executor.py  intelligent_cache.py  management_api_client.py  mcp_client.py  mcp_client_simple.py  mcp_manager.py  network_context_service.py  ollama_client.py  openrouter_client.py  query_orchestrator.py
utils/: console_logger.py  file_manager.py  validators.py
