[project]
name = "checkpoint-mcp-chat"
version = "0.1.0"
description = "Check Point MCP Chat - Intelligent chat interface for Check Point MCP servers"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.2",
    "mcp>=1.16.0",
    "pyyaml>=6.0",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
]

[tool.setuptools]
packages = ["services", "utils"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.toml"]
